half way with css

--- a/index.html
+++ b/index.html
@@ -60,45 +60,54 @@
         <div class="col-lg-6">
           <img src="/assets/images/desktop/image-interactive.jpg" alt="">
         </div>
-        <div class="col-lg-6">
-          <h3>the leader in interactive vr</h3>
-          <p>Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.</p>
+        <div class="col-lg-6 lead-box">
+          <h3 class="leader">the leader in interactive vr</h3>
+          <p class="history">Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.</p>
         </div>
       </div>
     
   </section>
 
 <section id="creations">
-  <h2 class="create">Our creations</h2>
-  <a href="">See all</a>
+  <div class="container">
+    <h2 class="create">Our creations</h2>
+    <a href="">See all</a>
 
-  <div class="row">
-    <div class="col-sm-3">
-      <img src="/assets/images/desktop/image-deep-earth.jpg" alt="earth">
-    </div>
-    <div class="col-sm-3">
-      <img src="/assets/images/desktop/image-night-arcade.jpg" alt="night">
-    </div>
-    <div class="col-sm-3">
-      <img src="/assets/images/desktop/image-soccer-team.jpg" alt="soccer">
-    </div>
-    <div class="col-sm-3">
-      <img src="/assets/images/desktop/image-grid.jpg" alt="">
-    </div>
-    <div class="col-sm-3">
-      <img src="/assets/images/desktop/image-from-above.jpg" alt="">
-    </div>
-    <div class="col-sm-3">
-      <img src="/assets/images/desktop/image-pocket-borealis.jpg" alt="pocket">
-    </div>
-    <div class="col-sm-3">
-      <img src="/assets/images/desktop/image-curiosity.jpg" alt="curious">
-    </div>
-    <div class="col-sm-3">
-      <img src="/assets/images/desktop/image-fisheye.jpg" alt="hero">
+    <div class="row">
+      <div class="col-sm-3">
+        <img src="/assets/images/desktop/image-deep-earth.jpg" class="group-image" alt="earth">
+        <h3 class="text">deep earth</h3>
+      </div>
+      <div class="col-sm-3">
+        <img src="/assets/images/desktop/image-night-arcade.jpg" class="group-image" alt="night">
+        <h3 class="text">night arcade</h3>
+      </div>
+      <div class="col-sm-3">
+        <img src="/assets/images/desktop/image-soccer-team.jpg" class="group-image" alt="soccer">
+        <h3 class="text">soccer team vr</h3>
+      </div>
+      <div class="col-sm-3">
+        <img src="/assets/images/desktop/image-grid.jpg" class="group-image" alt="grid">
+        <h3 class="text">the grid</h3>
+      </div>
+      <div class="col-sm-3">
+        <img src="/assets/images/desktop/image-from-above.jpg" class="group-image" alt="">
+        <h3 class="text">from above vr</h3>
+      </div>
+      <div class="col-sm-3">
+        <img src="/assets/images/desktop/image-pocket-borealis.jpg" class="group-image" alt="pocket">
+        <h3 class="text">pocket borealis</h3>
+      </div>
+      <div class="col-sm-3">
+        <img src="/assets/images/desktop/image-curiosity.jpg" class="group-image" alt="curious">
+        <h3 class="text">the curiosity</h3>
+      </div>
+      <div class="col-sm-3">
+        <img src="/assets/images/desktop/image-fisheye.jpg" class="group-image" alt="hero">
+        <h3 class="text">make it fisheye</h3>
+      </div>
     </div>
   </div>
-
 </section>
 
 
