--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Loopstudios -- Your studio house</title>
 
+  <!-- font awesome  -->
+<link rel="stylesheet" href="  https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="/css/bootstrap.css">
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous"> -->
@@ -69,65 +72,71 @@
   </section>
 
 <section id="creations">
-  <div class="container">
-    <h2 class="create">Our creations</h2>
-    <a href="">See all</a>
-
+  
+    <div class="spread ">
+      <h2 class="create">Our creations</h2>
+      <button class="see">See all</button>
+    </div>
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-sm-3 image-holder">
         <img src="/assets/images/desktop/image-deep-earth.jpg" class="group-image" alt="earth">
         <h3 class="text">deep earth</h3>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 image-holder">
         <img src="/assets/images/desktop/image-night-arcade.jpg" class="group-image" alt="night">
         <h3 class="text">night arcade</h3>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 image-holder">
         <img src="/assets/images/desktop/image-soccer-team.jpg" class="group-image" alt="soccer">
         <h3 class="text">soccer team vr</h3>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 image-holder">
         <img src="/assets/images/desktop/image-grid.jpg" class="group-image" alt="grid">
         <h3 class="text">the grid</h3>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 image-holder">
         <img src="/assets/images/desktop/image-from-above.jpg" class="group-image" alt="">
         <h3 class="text">from above vr</h3>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 image-holder">
         <img src="/assets/images/desktop/image-pocket-borealis.jpg" class="group-image" alt="pocket">
         <h3 class="text">pocket borealis</h3>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 image-holder">
         <img src="/assets/images/desktop/image-curiosity.jpg" class="group-image" alt="curious">
         <h3 class="text">the curiosity</h3>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 image-holder">
         <img src="/assets/images/desktop/image-fisheye.jpg" class="group-image" alt="hero">
         <h3 class="text">make it fisheye</h3>
       </div>
     </div>
-  </div>
+  
 </section>
 
 
-<footer id="foot">
-  <ul>
-    <li>loopstudios</li>
-    <li>facebook</li>
-    <li>twitter</li>
-    <li>pinterest</li>
-    <li>instagram</li>
-  </ul>
+<footer class="foot">
 
-  <ul>
-    <li>About</li>
-    <li>Careers</li>
-    <li>Events</li>
-    <li>Products</li>
-    <li>Support</li>
-    <li>&copy; 2021 loopstudios. All rights reserved.</li>
-  </ul>
+    <div class="group1">
+      <h3>loopstudios</h3>
+      <ul class="menu">
+        <li>About</li>
+        <li>Careers</li>
+        <li>Events</li>
+        <li>Products</li>
+        <li>Support</li>
+      </ul>
+    </div>
+    
+    <div class="socials">
+      <div class="social-icons">
+          <i class="fab fa-2x fa-facebook-square"></i>
+          <i class="fab fa-2x fa-twitter-square"></i>
+          <i class="fab fa-2x fa-pinterest-square"></i>
+          <i class="fab fa-2x fa-instagram-square"></i>
+      </div>
+      <p>&copy; 2021 loopstudios. All rights reserved.</p>
+    </div>
 </footer>
 
 
